cluster-configs/base/etherpad/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: etherpad
  name: etherpad
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: etherpad
    weight: 100
  wildcardPolicy: None
